<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ImageView
        android:scaleType="centerCrop"
        android:layout_marginTop="-80dp"
        android:scaleY="0.9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/skydiveimg"
        android:contentDescription="@string/todo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="-56dp"
        app:cardBackgroundColor="#4285F4"
        app:cardCornerRadius="38dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details"
                style="@style/headings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:text="@string/details" />

            <TextView
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/skydivedetails" />

            <TextView
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/skydiveadress" />

            <TextView
                style="@style/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/skydivetimings" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/headings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skydivephone" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    style="@style/description"
                    android:text="@string/skydivephonenumber"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>