<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:id="@+id/drawer"
    android:fitsSystemWindows="true"
    tools:openDrawer="end"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainwallpaper"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_margin="20dp"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="40dp"
            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

<LinearLayout
    android:layout_below="@id/fragment_container"
    android:id="@+id/titlebar"
    android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:ignore="NotSibling">
<!--<ImageView-->
<!--    android:id="@+id/menubar"-->
<!--    android:layout_width="0dp"-->
<!--    android:layout_weight="1.2"-->
<!--    android:layout_height="match_parent"-->
<!--    android:src="@drawable/menubar"-->
<!--    android:padding="24dp"-->
<!--    android:contentDescription="TODO" />-->
    <ImageView
        android:id="@+id/menubar"
        android:layout_width="0dp"
        android:layout_weight="1.2"
        android:layout_height="match_parent"/>
    <ImageView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent"
        android:src="@drawable/titlebar"
        android:padding="24dp"
        android:contentDescription="TODO" />
    <ImageView
        android:id="@+id/emptyspace"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:contentDescription="TODO" />
</LinearLayout>
    <TextView
        android:id="@+id/trendingplaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/trending_places"
        style="@style/headings"
        android:layout_below="@id/titlebar"/>

    <androidx.viewpager2.widget.ViewPager2
        android:scaleY="0.9"
        android:clipToPadding="false"
        android:id="@+id/trendingplacesimages"
        android:layout_width="match_parent"
        android:layout_height="282dp"
        android:layout_below="@id/trendingplaces"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_below="@id/trendingplacesimages"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/dotscontainer"
        android:orientation="horizontal" />
<LinearLayout
    android:layout_width="match_parent"
    android:id="@+id/categorieslayout"
    android:layout_marginTop="16dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_below="@id/dotscontainer"
    android:orientation="vertical">

    <TextView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        style="@style/headings"
        android:layout_height="wrap_content"
        android:text="@string/categories"/>

    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoriesRecyclerView"/>
</LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categorieslayout"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/places"
            android:layout_width="match_parent"
            style="@style/headings"
            android:layout_height="wrap_content"
            android:text="@string/places"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/placesrecyclerview"/>
</LinearLayout>
</RelativeLayout>
</ScrollView>
<com.google.android.material.navigation.NavigationView
    android:theme="@style/Theme.drawer"
    style="@style/menuitems"
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/navigationview"
    android:background="#D4C7C7"
    app:menu="@menu/nav_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>
